# operating-system

./: .gitignore
linux/os/: .cproject  .project  CMakeLists.txt  entry.S.obj.txt  fat.bin.o.txt
linux/os/hosttools/tools/: CMakeLists.txt
linux/os/hosttools/tools/format/: CMakeLists.txt
linux/os/hosttools/tools/format/src/: format.c  format.h
linux/os/hosttools/tools/obj2bin/: CMakeLists.txt
linux/os/source/ntoskrnl/: CMakeLists.txt
linux/os/source/ntoskrnl/include/: kernel.h
linux/os/source/ntoskrnl/src/: boot.asm  kernel.c  linker.ld
linux/research/: jarvos_research.workspace  jarvos_research.workspace.layout
linux/research/CDRTools/: .cproject  .project  CMakeLists.txt
linux/research/DumpPartition/: .cproject  .project  DumpPartition.cbp  DumpPartition.depend  DumpPartition.layout  comma.cpp  fileio.cpp  main.cpp  main.h  print.cpp
linux/research/NTFSDump/: .cproject  .project  NTFSDump.cbp  NTFSDump.depend  NTFSDump.layout  main.cpp
linux/research/NTFSInfo/: .cproject  .project  NTFSInfo.cbp  NTFSInfo.depend  NTFSInfo.layout  ntfsinfo.c
linux/research/PEDump/: .cproject  .project  PEDUMP.H  PEDump.cbp  PEDump.depend  PEDump.layout  coffsymboltable.cpp  coffsymboltable.h  common.cpp  common.h  cv_dbg.h  dbgdump.cpp  dbgdump.h  exedump.cpp  exedump.h  libdump.cpp  libdump.h  objdump.cpp  objdump.h  pedump.cpp  resdump.cpp  romimage.cpp  romimage.h  symboltablesupport.cpp  symboltablesupport.h
linux/research/format/: .cproject  .project  format.cbp  format.cpp  format.depend  format.h  format.layout
linux/research/sample/: Makefile  hello32.exe.dump  hello64.exe.dump
linux/research/sample os/: CMakeLists.txt
linux/research/sample2/: Makefile  div.asm  hello.c
linux/research/test kernel 1/: makefile
linux/research/test kernel 2/: build.bat  build.sh  entry.asm  kernel.c  linker.ld  oskernel  oskernel.dump.txt
linux/research/test kernel 3/: build.bat  (+4 more)
linux/test/: build.bat  entry.S  entry.o.txt  freldr.c  freldr.exe.txt  freldr.o.txt  pcbios.h
linux/test2/: bootsect.asm  bootsect.img  build.sh  fat.lst  floppy.img  test.img
(+132 files in other folders)
